--- a/index.html
+++ b/index.html
@@ -20,11 +20,15 @@
 <body>
 <svg id="svg" xmlns="http://www.w3.org/2000/svg" viewBox="-240 -240 480 480">
 	<defs id="defs">
+		<circle id="c" r="5"></circle>
 		<path id="track_right" d="M0 480L0 20 A 20 20 0 0 0 -20 0 L-480 0"></path>
 		<path id="track_left" d="M0 480 L0 20 A 20 20 0 0 1 20 0 L 480 0"></path>
 	</defs>
 	<g id="stage">
 		<circle id="center-mark" r="50"></circle>
+	</g>
+	<g id="debug">
+
 	</g>
 </svg>
 </body>
