--- a/index.html
+++ b/index.html
@@ -9,11 +9,7 @@
 	<!--[if IE]>
 	<link href="css/ie.css" media="screen, projection" rel="stylesheet" type="text/css"/>
 	<![endif]-->
-	<script src="bower_components/jquery/dist/jquery.min.js"></script>
-	<script src="bower_components/jquery-mousewheel/jquery.mousewheel.min.js"></script>
-	<script src="bower_components/jquery.svg/jquery.svg.min.js"></script>
-	<script src="bower_components/underscore/underscore-min.js"></script>
-	<script src="bower_components/bootstrap-sass/assets/javascripts/bootstrap.min.js"></script>
+	<script src="js/bower.min.js"></script>
 	<script src="js/cv.js"></script>
 
 </head>
