--- a/index.html
+++ b/index.html
@@ -14,20 +14,15 @@
 
 </head>
 <body>
-<svg version="1.1" id="Calque_1" xmlns="http://www.w3.org/2000/svg" x="0px" y="0px"
-	 width="200px" height="50px" viewBox="0 0 200 50" enable-background="new 0 0 200 50" xml:space="preserve">
-
-</svg>
-
 <svg id="svg" xmlns="http://www.w3.org/2000/svg" viewBox="-240 -240 480 480">
 	<defs id="defs">
 		<circle id="c" r="7.5"></circle>
 		<path id="track_right" d="M0 480L0 20 A 20 20 0 0 0 -20 0 L-480 0"></path>
 		<path id="track_left" d="M0 480 L0 20 A 20 20 0 0 1 20 0 L 480 0"></path>
 		<g id="date-block">
-			<rect x="20" y="-20" width="80" height="40" fill="#fff"></rect>
-			<path d="M97.5-22h-73c-4.136,0-7.5,3.364-7.5,7.5V-4H9.163C7.619-7.53,4.1-10,0-10c-5.523,0-10,4.477-10,10s4.477,10,10,10	c4.1,0,7.619-2.47,9.163-6H17v10.5c0,4.136,3.364,7.5,7.5,7.5h73c4.136,0,7.5-3.364,7.5-7.5v-29C105-18.636,101.636-22,97.5-22z	 M100,14.5c0,1.378-1.122,2.5-2.5,2.5h-73c-1.378,0-2.5-1.122-2.5-2.5v-29c0-1.378,1.122-2.5,2.5-2.5h73c1.378,0,2.5,1.122,2.5,2.5 V14.5z"/>
-		</g>
+			<path fill="#FFFFFF" d="M100,14.5c0,1.378-1.122,2.5-2.5,2.5h-73c-1.378,0-2.5-1.122-2.5-2.5v-29c0-1.378,1.122-2.5,2.5-2.5h73 c1.378,0,2.5,1.122,2.5,2.5V14.5z"/>
+			<path d="M97.5-22h-73c-4.136,0-7.5,3.364-7.5,7.5V-4H9.163C7.619-7.53,4.1-10,0-10c-5.523,0-10,4.477-10,10s4.477,10,10,10	c4.1,0,7.619-2.47,9.163-6H17v10.5c0,4.136,3.364,7.5,7.5,7.5h73c4.136,0,7.5-3.364,7.5-7.5v-29C105-18.636,101.636-22,97.5-22zM100,14.5c0,1.378-1.122,2.5-2.5,2.5h-73c-1.378,0-2.5-1.122-2.5-2.5v-29c0-1.378,1.122-2.5,2.5-2.5h73c1.378,0,2.5,1.122,2.5,2.5V14.5z"/>
+				</g>
 	</defs>
 	<g id="stage">
 		<!--<circle id="center-mark" r="50"></circle>-->
