--- a/index.html
+++ b/index.html
@@ -9,11 +9,16 @@
 	<!--[if IE]>
 	<link href="css/ie.css" media="screen, projection" rel="stylesheet" type="text/css"/>
 	<![endif]-->
+	<link href='http://fonts.googleapis.com/css?family=Raleway:700,900,400' rel='stylesheet' type='text/css'>
 	<script src="js/bower.min.js"></script>
 	<script src="js/cv.js"></script>
 
 </head>
 <body>
+<header>
+	<h1>Arthur Violy</h1>
+	<div class="headlines"><h2>Programme</h2> <h2>Designe</h2> <h2>Enseigne</h2></div>
+</header>
 <svg id="svg" xmlns="http://www.w3.org/2000/svg" viewBox="-240 -240 480 480">
 	<defs id="defs">
 		<circle id="c" r="7.5"></circle>
