migration to Snap.svg

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 	<link href="css/ie.css" media="screen, projection" rel="stylesheet" type="text/css"/>
 	<![endif]-->
 	<link href='http://fonts.googleapis.com/css?family=Raleway:700,900,400' rel='stylesheet' type='text/css'>
-	<script src="js/bower.min.js"></script>
+	<script src="js/bower.js"></script>
 	<script src="js/cv.js"></script>
 
 </head>
@@ -19,21 +19,6 @@
 	<div class="headlines"><h2>Programme</h2> <h2>Designe</h2> <h2>Enseigne</h2></div>
 </header>
 <svg id="svg" xmlns="http://www.w3.org/2000/svg" viewBox="-240 -240 480 480">
-	<defs id="defs">
-		<circle id="c" r="7.5"></circle>
-		<path id="track_right" d="M0 480L0 20 A 20 20 0 0 0 -20 0 L-480 0"></path>
-		<path id="track_left" d="M0 480 L0 20 A 20 20 0 0 1 20 0 L 480 0"></path>
-		<g id="date-block">
-			<path fill="#FFFFFF" d="M100,14.5c0,1.378-1.122,2.5-2.5,2.5h-73c-1.378,0-2.5-1.122-2.5-2.5v-29c0-1.378,1.122-2.5,2.5-2.5h73 c1.378,0,2.5,1.122,2.5,2.5V14.5z"/>
-			<path d="M97.5-22h-73c-4.136,0-7.5,3.364-7.5,7.5V-4H9.163C7.619-7.53,4.1-10,0-10c-5.523,0-10,4.477-10,10s4.477,10,10,10	c4.1,0,7.619-2.47,9.163-6H17v10.5c0,4.136,3.364,7.5,7.5,7.5h73c4.136,0,7.5-3.364,7.5-7.5v-29C105-18.636,101.636-22,97.5-22zM100,14.5c0,1.378-1.122,2.5-2.5,2.5h-73c-1.378,0-2.5-1.122-2.5-2.5v-29c0-1.378,1.122-2.5,2.5-2.5h73c1.378,0,2.5,1.122,2.5,2.5V14.5z"/>
-				</g>
-	</defs>
-	<g id="stage">
-		<!--<circle id="center-mark" r="50"></circle>-->
-		<g id="items"></g>
-		<g id="dates-lines"></g>
-	</g>
-	<g id="debug"></g>
 </svg>
 </body>
 </html>
