--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head lang="fr">
 	<meta charset="UTF-8">
 	<title>Arthur Violy | curriculum vitæ | Designer | Programmer | Apprendre &amp; Enseigner </title>
+	<meta name="viewport" content="width=device-width, initial-scale=1.0, max-scale=1.0, min-scale=1.0"/>
 	<link href="css/screen.css" media="screen, projection" rel="stylesheet" type="text/css"/>
 	<link href="css/print.css" media="print" rel="stylesheet" type="text/css"/>
 	<!--[if IE]>
