--- a/index.html
+++ b/index.html
@@ -16,10 +16,11 @@
 </head>
 <body>
 <header>
-	<h1>Arthur Violy</h1>
+	<h1><span>Arthur</span> <span>Violy</span></h1>
 	<div class="headlines"><h2>Programme</h2> <h2>Designe</h2> <h2>Enseigne</h2></div>
 </header>
 <svg id="svg" xmlns="http://www.w3.org/2000/svg" viewBox="-240 -240 480 480">
 </svg>
+<div class="dialog">hello</div>
 </body>
 </html>
