--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
 </header>
 <div class="main"></div>
 <svg id="svg" xmlns="http://www.w3.org/2000/svg" viewBox="-240 -240 480 480">
+	<image xlink:href="images/panpan.svg" width="473" height="484" transform=" translate(-100,100) scale(.1)"></image>
 </svg>
 </body>
 </html>
