--- a/cv_arthur_violy.html
+++ b/cv_arthur_violy.html
@@ -4,14 +4,9 @@
 	<meta charset="UTF-8">
 	<title>Arthur Violy | curriculum vitæ | Design | Programme | Enseigne </title>
 	<meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-	<link href="css/screen.css" media="screen, projection" rel="stylesheet" type="text/css"/>
-	<link href="css/print.css" media="print" rel="stylesheet" type="text/css"/>
-	<!--[if IE]>
-	<link href="css/ie.css" media="screen, projection" rel="stylesheet" type="text/css"/>
-	<![endif]-->
+	<link href="css/screen.min.css" media="screen, projection" rel="stylesheet" type="text/css"/>
 	<link href='http://fonts.googleapis.com/css?family=Raleway:700,900,400' rel='stylesheet' type='text/css'>
-	<script src="js/bower.js"></script>
-	<script src="js/cv.js"></script>
+	<script src="js/cv.min.js"></script>
 
 </head>
 <body>
