--- a/index.html
+++ b/index.html
@@ -9,20 +9,176 @@
 	<!--[if IE]>
 	<link href="css/ie.css" media="screen, projection" rel="stylesheet" type="text/css"/>
 	<![endif]-->
-	<link href='http://fonts.googleapis.com/css?family=Raleway:700,900,400' rel='stylesheet' type='text/css'>
+	<link href='http://fonts.googleapis.com/css?family=Raleway:900,700,500,300' rel='stylesheet' type='text/css'>
 	<script src="js/bower.js"></script>
 	<script src="js/cv.js"></script>
 
 </head>
 <body>
+<div class="container">
 <header>
-	<h1><span>Arthur</span> <span>Violy</span></h1>
-	<div class="headlines"><h2>Programme</h2> <h2>Designe</h2> <h2>Enseigne</h2></div>
+	<h1><div>Curriculum Vitæ</div><div>Arthur Violy</div></h1>
+	<h2><div><div>programme</div> <div>designe</div><div>enseigne</div></div></h2>
 </header>
 <div class="main">
+	<div class="super-group">
+	<div class="group">
+		<h3>Parcours professionnel</h3>
+
+		<ul>
+			<li>
+				<h4>2012 - 2015 </h4>
+				<p>École supérieure d’art et de design d’Orléans,
+					<br/>technicien d’enseignement programmation et multimédia</p>
+			</li>
+			<li>
+				<h4>2009 - 2015</h4>
+				<p>Wizzmedia, Paris,
+					<br/>programmeur, agence web</p>
+			</li>
+			<li>
+				<h4>2009</h4>
+				<p>Trafik, Lyon, stagiaire,
+					<br />agence graphic design, web, multimédia, scénographie</p>
+			</li>
+			<li>
+				<h4>2009</h4>
+				<p>Inook, Lyon, stagiaire,
+					<br/>studio multimédia</p>
+			</li>
+			<li>
+				<h4>2007</h4>
+				<p>Upian, Paris, stagiaire,
+					<br/>agence web, webdoc</p>
+			</li>
+			<li>
+				<h4>2007</h4>
+				<p>Regart.net, Paris, stagiaire, centre de formation,
+					<br/>WebFlashFestival, Centre Georges Pompidou</p>
+			</li>
+		</ul>
+	</div>
+
+	<div class="group">
+		<h3>Formation</h3>
+		<ul>
+			<li>
+				<h4>2009 - 2012</h4>
+				<p>École nationale supérieure des arts décoratifs, Paris, ENSADLab, groupe Écrans mobiles et récit interactif</p>
+			</li>
+			<li>
+				<h4>2007 - 2009</h4>
+				<p>École nationale supérieure d’art de Nancy, DNSEP section communication</p>
+			</li>
+			<li>
+				<h4>2004 - 2007</h4>
+				<p>École supérieure d’art de Lorraine, Épinal, DNAT design graphique et narration</p>
+			</li>
+			<li>
+				<h4>2003 - 2004</h4>
+				<p>École préparatoire aux écoles d’arts, Beaune</p>
+			</li>
+			<li>
+				<h4>2003</h4>
+				<p>Baccalauréat scientifique science de l’ingénieur</p>
+			</li>
+		</ul>
+	</div>
+
+	<div class="group">
+		<h3>Prix</h3>
+		<ul>
+			<li>
+				<h4>2013</h4>
+				<p>Vainqueur de la MediaLabSession Paris hackaton innovation média</p>
+			</li>
+			<li>
+				<h4>2006</h4>
+				<p>Lauréat du WebFlashFestival catégorie Net Art/Graphisme</p>
+			</li>
+		</ul>
+	</div>
+	</div>
+
+	<div class="super-group">
+
+	<div class="group">
+		<h3>Compétences et outils</h3>
+		<ul>
+			<li>
+				<h4>Programmation</h4>
+				<p>Processing, Javascript, Python, ActionScript</p>
+			</li>
+			<li>
+				<h4>Hardware boards</h4>
+				<p>Arduino, RaspberryPi, WeIO</p>
+			</li>
+			<li>
+				<h4>Interfaces tangibles</h4>
+				<p>Leap Motion, Kinect, Wiimote RFID</p>
+			</li>
+		</ul>
+	</div>
+
+	<div class="group">
+		<ul>
+			<li>
+				<h4>Web</h4>
+				<p>Html5, Css3, JS, Canvas, NodeJS, Sass, Less, Grunt, Bower, SVG, RaphaëlJS, Php, jQuery, Mysql, Wordpress, Responsive design</p>
+			</li>
+			<li>
+				<h4>Interfaçage</h4>
+				<p>OSC, DMX, Spacebrew</p>
+			</li>
+			<li>
+				<h4>Frameworks</h4>
+				<p>Geomerative, OpenCV, Hype</p>
+			</li>
+			<li>
+
+			</li>
+		</ul>
+	</div>
+
+	<div class="group">
+		<ul>
+			<li>
+				<h4>Photo, vidéo, animation</h4>
+				<p>Photoshop, Illustrator, Flash,
+				After Effect, Première</p>
+			</li>
+			<li>
+				<h4>3D Modeling</h4>
+				<p>Grasshopper+Rhino</p>
+			</li>
+			<li>
+				<h4>Autres</h4>
+				<p>OsX, Linux, Git+Github</p>
+			</li>
+		</ul>
+	</div>
+
+	</div>
+
+	<div class="super-group">
+
+		<div class="group">
+
+			<h3>Contact</h3>
+			<p>
+				Arthur Violy
+				<br/><i class="fa fa-home"></i> 105, avenue de Saint-Mandé 75012 Paris
+				<br/><a href="tel:+33688014224" title="Arthur Violy"><i class="fa fa-phone"></i> 06 88 01 42 24</a>
+				<br/><a href="https://twitter.com/_panpan"><i class="fa fa-twitter"></i> @_panpan</a>
+				<br/><a href="https://github.com/violy"><i class="fa fa-github"></i> /violy</a>
+				<br/><a href="http://violy.net"><i class="fa fa-external-link"></i> violy.net</a>
+			</p>
+
+		</div>
+
+	</div>
+
 </div>
-<svg id="svg" xmlns="http://www.w3.org/2000/svg" viewBox="-240 -240 480 480">
-	<image xlink:href="images/panpan.svg" width="473" height="484" transform=" translate(-100,100) scale(.1)"></image>
-</svg>
+</div>
 </body>
 </html>
