cv_arthur_violy

--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
 	<link href="css/ie.css" media="screen, projection" rel="stylesheet" type="text/css"/>
 	<![endif]-->
 	<link href='http://fonts.googleapis.com/css?family=Raleway:900,700,500,300' rel='stylesheet' type='text/css'>
-	<script src="js/bower.js"></script>
-	<script src="js/cv.js"></script>
+	<!--<script src="js/bower.js"></script>
+	<script src="js/cv.js"></script>-->
 
 </head>
 <body>
@@ -162,7 +162,9 @@
 
 	<div class="super-group">
 
-		<div class="group">
+		<div class="group panpan"></div>
+
+		<div class="group contact">
 
 			<h3>Contact</h3>
 			<p>
