--- a/index.html
+++ b/index.html
@@ -4,10 +4,10 @@
 	<meta charset="UTF-8">
 	<title>Arthur Violy | curriculum vitæ | Designer | Programmer | Apprendre &amp; Enseigner </title>
 	<meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-	<link href="css/screen.css" media="screen, projection" rel="stylesheet" type="text/css"/>
+	<link href="css/screen.css" media="all" rel="stylesheet" type="text/css"/>
 	<link href="css/print.css" media="print" rel="stylesheet" type="text/css"/>
 	<!--[if IE]>
-	<link href="css/ie.css" media="screen, projection" rel="stylesheet" type="text/css"/>
+	<link href="css/ie.css" media="all" rel="stylesheet" type="text/css"/>
 	<![endif]-->
 	<link href='http://fonts.googleapis.com/css?family=Raleway:900,700,500,300' rel='stylesheet' type='text/css'>
 	<!--<script src="js/bower.js"></script>
@@ -17,8 +17,8 @@
 <body>
 <div class="container">
 <header>
-	<h1><div>Curriculum Vitæ</div><div>Arthur Violy</div></h1>
-	<h2><div><div>programme</div> <div>designe</div><div>enseigne</div></div></h2>
+	<h1><span>Curriculum Vitæ</span><span>Arthur Violy</span></h1>
+	<h2><span><span>programme</span> <span>designe</span><span>enseigne</span></span></h2>
 </header>
 <div class="main">
 	<div class="super-group">
