--- a/cv_arthur_violy.html
+++ b/cv_arthur_violy.html
@@ -17,8 +17,8 @@
 <body>
 <div class="container">
 <header>
-	<h1><span>Curriculum Vitæ</span><span>Arthur Violy</span></h1>
-	<h2><span><span>programme</span> <span>designe</span><span>enseigne</span></span></h2>
+	<h1><span>Curriculum Vitæ</span> <span>Arthur Violy</span></h1>
+	<h2><span><span>programme</span> <span>designe</span> <span>enseigne</span></span></h2>
 </header>
 <div class="main">
 	<div class="super-group">
@@ -27,12 +27,12 @@
 
 		<ul>
 			<li>
-				<h4>2012 - 2015 </h4>
+				<h4>2012 - 2016 </h4>
 				<p>École supérieure d’art et de design d’Orléans,
 					<br/>technicien d’enseignement programmation et multimédia</p>
 			</li>
 			<li>
-				<h4>2009 - 2015</h4>
+				<h4>2009 - 2016</h4>
 				<p>Wizzmedia, Paris,
 					<br/>programmeur, agence web</p>
 			</li>
@@ -124,7 +124,7 @@
 		<ul>
 			<li>
 				<h4>Web</h4>
-				<p>Html5, Css3, JS, Canvas, NodeJS, Sass, Less, Grunt, Bower, SVG, RaphaëlJS, Php, jQuery, Mysql, Wordpress, Responsive design</p>
+				<p>Html5, Css3, JS, Canvas, NodeJS, Sass, Less, Grunt, Bower, SVG, p5.js, Php, jQuery, Mysql, Wordpress, Responsive design</p>
 			</li>
 			<li>
 				<h4>Interfaçage</h4>
