--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 <div class="container">
 <header>
 	<h1><span>Curriculum Vitæ</span><span>Arthur Violy</span></h1>
-	<h2><span><span>programme</span> <span>designe</span><span>enseigne</span></span></h2>
+	<h2><span><span>programme</span><span>designe</span><span>enseigne</span></span></h2>
 </header>
 <div class="main">
 	<div class="super-group">
@@ -115,7 +115,7 @@
 			</li>
 			<li>
 				<h4>Interfaces tangibles</h4>
-				<p>Leap Motion, Kinect, Wiimote RFID</p>
+				<p>Leap Motion, Kinect, Wiimote, RFID</p>
 			</li>
 		</ul>
 	</div>
@@ -124,7 +124,7 @@
 		<ul>
 			<li>
 				<h4>Web</h4>
-				<p>Html5, Css3, JS, Canvas, NodeJS, Sass, Less, Grunt, Bower, SVG, RaphaëlJS, Php, jQuery, Mysql, Wordpress, Responsive design</p>
+				<p>Html5, Css3, JS, web mobile, Canvas, NodeJS, Sass, Less, Grunt, Bower, SVG, p5.js, Php, jQuery, Mysql, Wordpress</p>
 			</li>
 			<li>
 				<h4>Interfaçage</h4>
@@ -153,7 +153,7 @@
 			</li>
 			<li>
 				<h4>Autres</h4>
-				<p>OsX, Linux, Git+Github</p>
+				<p>OsX, Linux, Git, Docker</p>
 			</li>
 		</ul>
 	</div>
