--- a/cv_arthur_violy.html
+++ b/cv_arthur_violy.html
@@ -27,33 +27,33 @@
 
 		<ul>
 			<li>
-				<h4>2012 - 2016 </h4>
-				<p>École supérieure d’art et de design d’Orléans,
-					<br/>technicien d’enseignement programmation et multimédia</p>
+				<h4>2009 - Aujourd’hui</h4>
+				<p><a href="https://www.wizzmedia.fr" target="_blank">Wizzmedia</a>, Paris,
+					<br/><em>programmeur</em>, agence web</p>
 			</li>
 			<li>
-				<h4>2009 - 2016</h4>
-				<p>Wizzmedia, Paris,
-					<br/>programmeur, agence web</p>
+				<h4>2012 - 2016</h4>
+				<p><a href="https://esad-orleans.fr" target="_blank">École supérieure d’art et de design d’Orléans</a>,
+					<br/><em>technicien d’enseignement</em>, responsable de l’atelier programmation et multimédia</p>
 			</li>
 			<li>
 				<h4>2009</h4>
-				<p>Trafik, Lyon, stagiaire,
+				<p><a href="http://www.lavitrinedetrafik.fr/" target="_blank">Trafik</a>, Lyon, <em>stagiaire</em>,
 					<br />agence graphic design, web, multimédia, scénographie</p>
 			</li>
 			<li>
 				<h4>2009</h4>
-				<p>Inook, Lyon, stagiaire,
+				<p><a href="https://inook.com" target="_blank">Inook</a>, Lyon, <em>stagiaire</em>,
 					<br/>studio multimédia</p>
 			</li>
 			<li>
 				<h4>2007</h4>
-				<p>Upian, Paris, stagiaire,
+				<p><a href="https://www.upian.com" target="_blank">Upian</a>, Paris, <em>stagiaire</em>,
 					<br/>agence web, webdoc</p>
 			</li>
 			<li>
 				<h4>2007</h4>
-				<p>Regart.net, Paris, stagiaire, centre de formation,
+				<p>Regart.net, Paris, <em>stagiaire</em>, centre de formation,
 					<br/>WebFlashFestival, Centre Georges Pompidou</p>
 			</li>
 		</ul>
@@ -64,7 +64,7 @@
 		<ul>
 			<li>
 				<h4>2009 - 2012</h4>
-				<p>École nationale supérieure des arts décoratifs, Paris, ENSADLab, groupe Écrans mobiles et récit interactif</p>
+				<p>École nationale supérieure des arts décoratifs, Paris, <a href="http://www.ensad.fr/recherche/ensadlab" target="_blank">ENSADLab</a>, groupe <a href="https://emeri.ensadlab.fr/" target="_blank">Écrans mobiles et récit interactif</a></p>
 			</li>
 			<li>
 				<h4>2007 - 2009</h4>
@@ -86,15 +86,35 @@
 	</div>
 
 	<div class="group">
-		<h3>Prix</h3>
+		<h3>En parallèle</h3>
 		<ul>
 			<li>
+				<h4>depuis 2017</h4>
+				<p>Membre du commité éditorial de <a href="https://nouveaudocument.fr">Nouveau&nbsp;Document</a>, chargé des nouveaux&nbsp;médias</p>
+			</li>
+			<li>
+				<h4>2016 - 2017</h4>
+				<p>Co-auteur (avec Bertrand Sandrez) de <a href="https://polyptyque.photo">Polyptyque</a>, dispositif photographique expérimental.
+					projet personnel réalisé avec <a href="http://www.f93.fr">F93</a>.
+					<br /><a href="http://notes.polyptyque.photo/" target="_blank">notes du projet</a>,
+					<a href="https://twitter.com/PolyptyquePhoto" target="_blank">twitter</a>
+				</p>
+			</li>
+			<li>
+				<h4>depuis 2016</h4>
+				<p>Organise des workshops
+					<br />(cartographie, interaction, generative design)
+					<br />à <a href="https://www.academie-charpentier.fr/">l’Académie Charpentier</a></p>
+			</li>
+			<li>
 				<h4>2013</h4>
-				<p>Vainqueur de la MediaLabSession Paris hackaton innovation média</p>
+				<p>Vainqueur de la <a href="https://www.facebook.com/MedialabSession/" target="_blank">MediaLabSession Paris</a>, <br/>hackaton innovation média</p>
 			</li>
 			<li>
 				<h4>2006</h4>
-				<p>Lauréat du WebFlashFestival catégorie Net Art/Graphisme</p>
+				<p>Lauréat du WebFlashFestival
+					<br/>catégorie
+					Net&nbsp;Art/Graphisme</p>
 			</li>
 		</ul>
 	</div>
@@ -111,11 +131,11 @@
 			</li>
 			<li>
 				<h4>Hardware boards</h4>
-				<p>Arduino, RaspberryPi, WeIO</p>
+				<p>Arduino, RaspberryPi, Raspbian, PiCamera</p>
 			</li>
 			<li>
 				<h4>Interfaces tangibles</h4>
-				<p>Leap Motion, Kinect, Wiimote RFID</p>
+				<p>Leap Motion, Kinect, Wiimote, RFID</p>
 			</li>
 		</ul>
 	</div>
@@ -124,7 +144,7 @@
 		<ul>
 			<li>
 				<h4>Web</h4>
-				<p>Html5, Css3, JS, Canvas, NodeJS, Sass, Less, Grunt, Bower, SVG, p5.js, Php, jQuery, Mysql, Wordpress, Responsive design</p>
+				<p>Html5, Css3, JS, Canvas, NodeJS, Sass, Less, Grunt, Bower, SVG, p5.js, d3.js, three.js, vue.js, underscore, backbone, Php, jQuery, Mysql, Wordpress, Responsive&nbsp;design</p>
 			</li>
 			<li>
 				<h4>Interfaçage</h4>
@@ -148,12 +168,15 @@
 				After Effect, Première</p>
 			</li>
 			<li>
-				<h4>3D Modeling</h4>
-				<p>Grasshopper+Rhino</p>
+				<h4>Autres</h4>
+				<p>OsX, Linux, Git/Github/Gitlab, JIRA, Docker</p>
 			</li>
 			<li>
-				<h4>Autres</h4>
-				<p>OsX, Linux, Git+Github</p>
+				<h4>Et aussi</h4>
+				<p>Habitué du hackerspace <a href="http://jack.tf" target="_blank">le Jack</a>,
+					<br /><a href="https://fr.wikipedia.org/wiki/Utilisateur:Zpanpana" target="_blank">Rhinocéros laineux</a> sur Wikipédia,
+					<br />Jardinier&nbsp;<a href="https://twitter.com/hashtag/arbre287173" target="_blank">de&nbsp;rue</a> à Paris
+					</p>
 			</li>
 		</ul>
 	</div>
@@ -169,11 +192,14 @@
 			<h3>Contact</h3>
 			<p>
 				Arthur Violy
-				<br/><i class="fa fa-home"></i> 105, avenue de Saint-Mandé 75012 Paris
+				<br/><i class="fa fa-heartbeat"></i> né en 1985<small>, comme Windows 1.0</small>
+				<br/>
+				<br/><i class="fa fa-home"></i> 37, rue des Rasselins, Paris 20<sup>e</sup>, France
 				<br/><a href="tel:+33688014224" title="Arthur Violy"><i class="fa fa-phone"></i> 06 88 01 42 24</a>
 				<br/><a href="https://twitter.com/_panpan"><i class="fa fa-twitter"></i> @_panpan</a>
 				<br/><a href="https://github.com/violy"><i class="fa fa-github"></i> /violy</a>
-				<br/><a href="http://violy.net"><i class="fa fa-external-link"></i> violy.net</a>
+				<br/><a href="https://gitlab.violy.fr/explore/projects"><i class="fa fa-gitlab"></i> gitlab</a>
+				<br/><a href="https://violy.net"><i class="fa fa-external-link"></i> violy.net</a> <small class="special-mention">sur le Web depuis 2004</small>
 			</p>
 
 		</div>
