--- a/cv_arthur_violy.html
+++ b/cv_arthur_violy.html
@@ -9,9 +9,7 @@
 	<!--[if IE]>
 	<link href="css/ie.css" media="all" rel="stylesheet" type="text/css"/>
 	<![endif]-->
-	<link href='http://fonts.googleapis.com/css?family=Raleway:900,700,500,300' rel='stylesheet' type='text/css'>
-	<!--<script src="js/bower.js"></script>
-	<script src="js/cv.js"></script>-->
+	<link href='//fonts.googleapis.com/css?family=Raleway:900,700,500,300' rel='stylesheet' type='text/css'>
 
 </head>
 <body>
@@ -90,12 +88,12 @@
 		<ul>
 			<li>
 				<h4>depuis 2017</h4>
-				<p>Membre du commité éditorial de <a href="https://nouveaudocument.fr">Nouveau&nbsp;Document</a>, chargé des nouveaux&nbsp;médias</p>
+				<p>Membre du commité éditorial de <a href="https://nouveaudocument.fr" target="_blank">Nouveau&nbsp;Document</a>, chargé des nouveaux&nbsp;médias</p>
 			</li>
 			<li>
 				<h4>2016 - 2017</h4>
-				<p>Co-auteur (avec Bertrand Sandrez) de <a href="https://polyptyque.photo">Polyptyque</a>, dispositif photographique expérimental.
-					projet personnel réalisé avec <a href="http://www.f93.fr">F93</a>.
+				<p>Co-auteur (avec Bertrand Sandrez) de <a href="https://polyptyque.photo" target="_blank">Polyptyque</a>, dispositif photographique expérimental.
+					projet personnel réalisé avec <a href="http://www.f93.fr" target="_blank">F93</a>.
 					<br /><a href="http://notes.polyptyque.photo/" target="_blank">notes du projet</a>,
 					<a href="https://twitter.com/PolyptyquePhoto" target="_blank">twitter</a>
 				</p>
@@ -104,7 +102,7 @@
 				<h4>depuis 2016</h4>
 				<p>Organise des workshops
 					<br />(cartographie, interaction, generative design)
-					<br />à <a href="https://www.academie-charpentier.fr/">l’Académie Charpentier</a></p>
+					<br />à <a href="https://www.academie-charpentier.fr/" target="_blank">l’Académie Charpentier</a></p>
 			</li>
 			<li>
 				<h4>2013</h4>
@@ -196,10 +194,10 @@
 				<br/>
 				<br/><i class="fa fa-home"></i> 37, rue des Rasselins, Paris 20<sup>e</sup>, France
 				<br/><a href="tel:+33688014224" title="Arthur Violy"><i class="fa fa-phone"></i> 06 88 01 42 24</a>
-				<br/><a href="https://twitter.com/_panpan"><i class="fa fa-twitter"></i> @_panpan</a>
-				<br/><a href="https://github.com/violy"><i class="fa fa-github"></i> /violy</a>
-				<br/><a href="https://gitlab.violy.fr/explore/projects"><i class="fa fa-gitlab"></i> gitlab</a>
-				<br/><a href="https://violy.net"><i class="fa fa-external-link"></i> violy.net</a> <small class="special-mention">sur le Web depuis 2004</small>
+				<br/><a href="https://twitter.com/_panpan" target="_blank"><i class="fa fa-twitter"></i> @_panpan</a>
+				<br/><a href="https://github.com/violy" target="_blank"><i class="fa fa-github"></i> /violy</a>
+				<br/><a href="https://gitlab.violy.fr/explore/projects" target="_blank"><i class="fa fa-gitlab"></i> gitlab</a>
+				<br/><a href="https://violy.net" target="_blank"><i class="fa fa-external-link"></i> violy.net</a> <small class="special-mention">sur le Web depuis 2004</small>
 			</p>
 
 		</div>
