--- a/cv_arthur_violy.html
+++ b/cv_arthur_violy.html
@@ -190,7 +190,7 @@
 			<h3>Contact</h3>
 			<p>
 				Arthur Violy
-				<br/><i class="fa fa-heartbeat"></i> né en 1985<small>, comme Windows 1.0</small>
+				<br/><i class="fa fa-heartbeat"></i> né en 1985<small>, comme Amiga</small>
 				<br/>
 				<br/><i class="fa fa-home"></i> 37, rue des Rasselins, Paris 20<sup>e</sup>, France
 				<br/><a href="tel:+33688014224" title="Arthur Violy"><i class="fa fa-phone"></i> 06 88 01 42 24</a>
