--- a/portfolio.html
+++ b/portfolio.html
@@ -3,6 +3,7 @@
 <head lang="fr">
 	<meta charset="UTF-8">
 	<title>Arthur Violy | Portfolio</title>
+	<meta name="description" content="Arthur Violy | programme designe enseigne | Portofolio Web, références, travaux, projets, recherches." />
 	<meta name="viewport" content="width=device-width, initial-scale=1.0"/>
 	<link href="css/screen.min.css" media="all" rel="stylesheet" type="text/css"/>
 	<link href="css/print.min.css" media="print" rel="stylesheet" type="text/css"/>
@@ -454,6 +455,7 @@
 				<br/><a href="https://twitter.com/_panpan" target="_blank"><i class="fa fa-twitter"></i> @_panpan</a>
 				<br/><a href="https://github.com/violy" target="_blank"><i class="fa fa-github"></i> /violy</a>
 				<br/><a href="https://gitlab.violy.fr/explore/projects" target="_blank"><i class="fa fa-gitlab"></i> gitlab</a>
+				<br/><a href="https://violy.net/cv_arthur_violy.html" target="_blank"><i class="fa fa-black-tie"></i> C.V.</a>
 				<br/><a href="https://violy.net" target="_blank"><i class="fa fa-external-link"></i> violy.net</a> <small class="special-mention">sur le Web depuis 2004</small>
 			</p>
 
