--- a/cv_arthur_violy.html
+++ b/cv_arthur_violy.html
@@ -198,7 +198,7 @@
 				<br/><a href="https://twitter.com/_panpan" target="_blank"><i class="fa fa-twitter"></i> @_panpan</a>
 				<br/><a href="https://github.com/violy" target="_blank"><i class="fa fa-github"></i> /violy</a>
 				<br/><a href="https://gitlab.violy.fr/explore/projects" target="_blank"><i class="fa fa-gitlab"></i> gitlab</a>
-				<br/><a href="https://violy.net/portfolio.html" target="_blank"><i class="fa fa-folder-open"></i> portfolio</a>
+				<br/><a href="https://violy.net/portfolio.html"><i class="fa fa-folder-open"></i> portfolio</a>
 				<br/><a href="https://violy.net" target="_blank"><i class="fa fa-external-link"></i> violy.net</a> <small class="special-mention">sur le Web depuis 2004</small>
 			</p>
 
