--- a/cv_arthur_violy.html
+++ b/cv_arthur_violy.html
@@ -17,7 +17,7 @@
 <div class="container">
 <header>
 	<h1><span>Curriculum Vitæ</span> <span>Arthur Violy</span></h1>
-	<h2><span><span>programme</span> <span>designe</span> <span>enseigne</span></span></h2>
+	<h2><span><span>programme,</span> <span>designe,</span> <span>enseigne,</span></span></h2>
 </header>
 <div class="main">
 	<div class="super-group">
