--- a/portfolio.html
+++ b/portfolio.html
@@ -17,7 +17,7 @@
 <div class="container">
 <header>
 	<h1><span>Références,</span> <span>Arthur Violy</span></h1>
-	<h2><span><span>programme</span> <span>designe</span> <span>enseigne</span></span></h2>
+    <h2><span><span>programme,</span> <span>designe,</span> <span>enseigne,</span></span></h2>
 </header>
 <div class="main portfolio">
 	<div class="super-group">
@@ -116,7 +116,7 @@
 				</td>
 				<td class="focus">Conception et production
 					d’une cabine de prise de portrait 180° avec 20 caméra.
-					Prototypage, et expérimentation cross-platforme</td>
+					Prototypage, et expérimentation cross-platforme.</td>
 			</tr>
 
 			<tr>
@@ -225,7 +225,7 @@
 					<code>SVG</code>
 					<code>GSAP</code>
 				</td>
-				<td class="focus">Site Web de présentation de produit cosmétique, travail d’intégration et d’animation avancée.</td>
+				<td class="focus">Site Web de présentation de produits cosmétiques, travail d’intégration et d’animation avancée.</td>
 			</tr>
 
 			<tr>
@@ -305,7 +305,7 @@
 					<code>Processing</code>
 				</td>
 				<td class="focus">Géneration algorithmique de polices de caractères.
-					Travail en relation forte avec l’étudiante. </td>
+					Travail en tutorat avec l’étudiante. </td>
 			</tr>
 
 			<tr>
@@ -323,7 +323,7 @@
 					<code>Processing</code>
 				</td>
 				<td class="focus">Géneration algorithmique de titrages, de typographies et de mise en page.
-					Reflexion sur les formes naturelles. </td>
+                    Réflexion sur les formes naturelles. </td>
 			</tr>
 
 			<tr>
@@ -431,7 +431,7 @@
 					<code>php</code>
 				</td>
 				<td class="focus">Vidéo interactive et Web, imaginée pour le web-mobile.
-					Reflection sur l’orientation de l’écran et de la caméra. </td>
+					Réflexion sur l’orientation de l’écran et de la caméras. </td>
 			</tr>
 
 			</tbody>
