--- a/cv_arthur_violy.html
+++ b/cv_arthur_violy.html
@@ -12,202 +12,212 @@
 	<![endif]-->
 	<link href='//fonts.googleapis.com/css?family=Raleway:900,700,500,300' rel='stylesheet' type='text/css'>
 
+	<!-- Global site tag (gtag.js) - Google Analytics -->
+	<script async src="https://www.googletagmanager.com/gtag/js?id=UA-113801860-1"></script>
+	<script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag(){dataLayer.push(arguments);}
+        gtag('js', new Date());
+
+        gtag('config', 'UA-113801860-1');
+	</script>
+
 </head>
 <body>
 <div class="container">
-<header>
-	<h1><span>Curriculum Vitæ</span> <span>Arthur Violy</span></h1>
-	<h2><span><span>programme,</span> <span>designe,</span> <span>enseigne,</span></span></h2>
-</header>
-<div class="main">
-	<div class="super-group">
-	<div class="group">
-		<h3>Parcours professionnel</h3>
+	<header>
+		<h1><span>Curriculum Vitæ</span> <span>Arthur Violy</span></h1>
+		<h2><span><span>programme,</span> <span>designe,</span> <span>enseigne,</span></span></h2>
+	</header>
+	<div class="main">
+		<div class="super-group">
+			<div class="group">
+				<h3>Parcours professionnel</h3>
 
-		<ul>
-			<li>
-				<h4>2009 - Aujourd’hui</h4>
-				<p><a href="https://www.wizzmedia.fr" target="_blank">Wizzmedia</a>, Paris,
-					<br/><em>programmeur</em>, agence web</p>
-			</li>
-			<li>
-				<h4>2012 - 2016</h4>
-				<p><a href="https://esad-orleans.fr" target="_blank">École supérieure d’art et de design d’Orléans</a>,
-					<br/><em>technicien d’enseignement</em>, responsable de l’atelier programmation et multimédia</p>
-			</li>
-			<li>
-				<h4>2009</h4>
-				<p><a href="http://www.lavitrinedetrafik.fr/" target="_blank">Trafik</a>, Lyon, <em>stagiaire</em>,
-					<br />agence graphic design, web, multimédia, scénographie</p>
-			</li>
-			<li>
-				<h4>2009</h4>
-				<p><a href="https://inook.com" target="_blank">Inook</a>, Lyon, <em>stagiaire</em>,
-					<br/>studio multimédia</p>
-			</li>
-			<li>
-				<h4>2007</h4>
-				<p><a href="https://www.upian.com" target="_blank">Upian</a>, Paris, <em>stagiaire</em>,
-					<br/>agence web, webdoc</p>
-			</li>
-			<li>
-				<h4>2007</h4>
-				<p>Regart.net, Paris, <em>stagiaire</em>, centre de formation,
-					<br/>WebFlashFestival, Centre Georges Pompidou</p>
-			</li>
-		</ul>
-	</div>
+				<ul>
+					<li>
+						<h4>2009 - Aujourd’hui</h4>
+						<p><a href="https://www.wizzmedia.fr" target="_blank">Wizzmedia</a>, Paris,
+							<br/><em>programmeur</em>, agence web</p>
+					</li>
+					<li>
+						<h4>2012 - 2016</h4>
+						<p><a href="https://esad-orleans.fr" target="_blank">École supérieure d’art et de design d’Orléans</a>,
+							<br/><em>technicien d’enseignement</em>, responsable de l’atelier programmation et multimédia</p>
+					</li>
+					<li>
+						<h4>2009</h4>
+						<p><a href="http://www.lavitrinedetrafik.fr/" target="_blank">Trafik</a>, Lyon, <em>stagiaire</em>,
+							<br />agence graphic design, web, multimédia, scénographie</p>
+					</li>
+					<li>
+						<h4>2009</h4>
+						<p><a href="https://inook.com" target="_blank">Inook</a>, Lyon, <em>stagiaire</em>,
+							<br/>studio multimédia</p>
+					</li>
+					<li>
+						<h4>2007</h4>
+						<p><a href="https://www.upian.com" target="_blank">Upian</a>, Paris, <em>stagiaire</em>,
+							<br/>agence web, webdoc</p>
+					</li>
+					<li>
+						<h4>2007</h4>
+						<p>Regart.net, Paris, <em>stagiaire</em>, centre de formation,
+							<br/>WebFlashFestival, Centre Georges Pompidou</p>
+					</li>
+				</ul>
+			</div>
 
-	<div class="group">
-		<h3>Formation</h3>
-		<ul>
-			<li>
-				<h4>2009 - 2012</h4>
-				<p>École nationale supérieure des arts décoratifs, Paris, <a href="http://www.ensad.fr/recherche/ensadlab" target="_blank">ENSADLab</a>, groupe <a href="https://emeri.ensadlab.fr/" target="_blank">Écrans mobiles et récit interactif</a></p>
-			</li>
-			<li>
-				<h4>2007 - 2009</h4>
-				<p>École nationale supérieure d’art de Nancy, DNSEP section communication</p>
-			</li>
-			<li>
-				<h4>2004 - 2007</h4>
-				<p>École supérieure d’art de Lorraine, Épinal, DNAT design graphique et narration</p>
-			</li>
-			<li>
-				<h4>2003 - 2004</h4>
-				<p>École préparatoire aux écoles d’arts, Beaune</p>
-			</li>
-			<li>
-				<h4>2003</h4>
-				<p>Baccalauréat scientifique science de l’ingénieur</p>
-			</li>
-		</ul>
-	</div>
+			<div class="group">
+				<h3>Formation</h3>
+				<ul>
+					<li>
+						<h4>2009 - 2012</h4>
+						<p>École nationale supérieure des arts décoratifs, Paris, <a href="http://www.ensad.fr/recherche/ensadlab" target="_blank">ENSADLab</a>, groupe <a href="https://emeri.ensadlab.fr/" target="_blank">Écrans mobiles et récit interactif</a></p>
+					</li>
+					<li>
+						<h4>2007 - 2009</h4>
+						<p>École nationale supérieure d’art de Nancy, DNSEP section communication</p>
+					</li>
+					<li>
+						<h4>2004 - 2007</h4>
+						<p>École supérieure d’art de Lorraine, Épinal, DNAT design graphique et narration</p>
+					</li>
+					<li>
+						<h4>2003 - 2004</h4>
+						<p>École préparatoire aux écoles d’arts, Beaune</p>
+					</li>
+					<li>
+						<h4>2003</h4>
+						<p>Baccalauréat scientifique science de l’ingénieur</p>
+					</li>
+				</ul>
+			</div>
 
-	<div class="group">
-		<h3>En parallèle</h3>
-		<ul>
-			<li>
-				<h4>depuis 2017</h4>
-				<p>Membre du commité éditorial de <a href="https://nouveaudocument.fr" target="_blank">Nouveau&nbsp;Document</a>, chargé des nouveaux&nbsp;médias</p>
-			</li>
-			<li>
-				<h4>2016 - 2017</h4>
-				<p>Co-auteur (avec Bertrand Sandrez) de <a href="https://polyptyque.photo" target="_blank">Polyptyque</a>, dispositif photographique expérimental.
-					projet personnel réalisé avec <a href="http://www.f93.fr" target="_blank">F93</a>.
-					<br /><a href="http://notes.polyptyque.photo/" target="_blank">notes du projet</a>,
-					<a href="https://twitter.com/PolyptyquePhoto" target="_blank">twitter</a>
+			<div class="group">
+				<h3>En parallèle</h3>
+				<ul>
+					<li>
+						<h4>depuis 2017</h4>
+						<p>Membre du commité éditorial de <a href="https://nouveaudocument.fr" target="_blank">Nouveau&nbsp;Document</a>, chargé des nouveaux&nbsp;médias</p>
+					</li>
+					<li>
+						<h4>2016 - 2017</h4>
+						<p>Co-auteur (avec Bertrand Sandrez) de <a href="https://polyptyque.photo" target="_blank">Polyptyque</a>, dispositif photographique expérimental.
+							projet personnel réalisé avec <a href="http://www.f93.fr" target="_blank">F93</a>.
+							<br /><a href="http://notes.polyptyque.photo/" target="_blank">notes du projet</a>,
+							<a href="https://twitter.com/PolyptyquePhoto" target="_blank">twitter</a>
+						</p>
+					</li>
+					<li>
+						<h4>depuis 2016</h4>
+						<p>Organise des workshops
+							<br />(cartographie, interaction, generative design)
+							<br />à <a href="https://www.academie-charpentier.fr/" target="_blank">l’Académie Charpentier</a></p>
+					</li>
+					<li>
+						<h4>2013</h4>
+						<p>Vainqueur de la <a href="https://www.facebook.com/MedialabSession/" target="_blank">MediaLabSession Paris</a>, <br/>hackaton innovation média</p>
+					</li>
+					<li>
+						<h4>2006</h4>
+						<p>Lauréat du WebFlashFestival
+							<br/>catégorie
+							Net&nbsp;Art/Graphisme</p>
+					</li>
+				</ul>
+			</div>
+		</div>
+
+		<div class="super-group">
+
+			<div class="group">
+				<h3>Compétences et outils</h3>
+				<ul>
+					<li>
+						<h4>Programmation</h4>
+						<p>Processing, Javascript, Python, ActionScript</p>
+					</li>
+					<li>
+						<h4>Hardware boards</h4>
+						<p>Arduino, RaspberryPi, Raspbian, PiCamera</p>
+					</li>
+					<li>
+						<h4>Interfaces tangibles</h4>
+						<p>Leap Motion, Kinect, Wiimote, RFID</p>
+					</li>
+				</ul>
+			</div>
+
+			<div class="group">
+				<ul>
+					<li>
+						<h4>Web</h4>
+						<p>Html5, Css3, JS, Canvas, NodeJS, Sass, Less, Grunt, Bower, SVG, p5.js, d3.js, three.js, vue.js, underscore, backbone, Php, jQuery, Mysql, Wordpress, Responsive&nbsp;design</p>
+					</li>
+					<li>
+						<h4>Interfaçage</h4>
+						<p>OSC, DMX, Spacebrew</p>
+					</li>
+					<li>
+						<h4>Frameworks</h4>
+						<p>Geomerative, OpenCV, Hype</p>
+					</li>
+					<li>
+
+					</li>
+				</ul>
+			</div>
+
+			<div class="group">
+				<ul>
+					<li>
+						<h4>Photo, vidéo, animation</h4>
+						<p>Photoshop, Illustrator, Flash,
+							After Effect, Première</p>
+					</li>
+					<li>
+						<h4>Autres</h4>
+						<p>OsX, Linux, Git/Github/Gitlab, JIRA, Docker</p>
+					</li>
+					<li>
+						<h4>Et aussi</h4>
+						<p>Habitué du hackerspace <a href="http://jack.tf" target="_blank">le Jack</a>,
+							<br /><a href="https://fr.wikipedia.org/wiki/Utilisateur:Zpanpana" target="_blank">Rhinocéros laineux</a> sur Wikipédia,
+							<br />Jardinier&nbsp;<a href="https://twitter.com/hashtag/arbre287173" target="_blank">de&nbsp;rue</a> à Paris
+						</p>
+					</li>
+				</ul>
+			</div>
+
+		</div>
+
+		<div class="super-group">
+
+			<div class="group panpan"></div>
+
+			<div class="group contact">
+
+				<h3>Contact</h3>
+				<p>
+					Arthur Violy
+					<br/><i class="fa fa-heartbeat"></i> né en 1985<small>, comme <a href="https://fr.wikipedia.org/wiki/Super_Mario_Bros." class="camouflage" target="_blank">Super Mario Bros.</a></small>
+					<br/>
+					<br/><i class="fa fa-home"></i> 37, rue des Rasselins, Paris 20<sup>e</sup>, France
+					<br/><a href="tel:+33688014224" title="Arthur Violy"><i class="fa fa-phone"></i> 06 88 01 42 24</a>
+					<br/><a href="https://twitter.com/_panpan" target="_blank"><i class="fa fa-twitter"></i> @_panpan</a>
+					<br/><a href="https://github.com/violy" target="_blank"><i class="fa fa-github"></i> /violy</a>
+					<br/><a href="https://gitlab.violy.fr/explore/projects" target="_blank"><i class="fa fa-gitlab"></i> gitlab</a>
+					<br/><a href="https://violy.net/portfolio.html"><i class="fa fa-folder-open"></i> portfolio</a>
+					<br/><a href="https://violy.net/pgp/" target="_blank"><i class="fa fa-user-secret"></i> pgp</a>
+					<br/><a href="https://violy.net" target="_blank"><i class="fa fa-external-link"></i> violy.net</a> <small class="special-mention">sur le Web depuis 2004</small>
 				</p>
-			</li>
-			<li>
-				<h4>depuis 2016</h4>
-				<p>Organise des workshops
-					<br />(cartographie, interaction, generative design)
-					<br />à <a href="https://www.academie-charpentier.fr/" target="_blank">l’Académie Charpentier</a></p>
-			</li>
-			<li>
-				<h4>2013</h4>
-				<p>Vainqueur de la <a href="https://www.facebook.com/MedialabSession/" target="_blank">MediaLabSession Paris</a>, <br/>hackaton innovation média</p>
-			</li>
-			<li>
-				<h4>2006</h4>
-				<p>Lauréat du WebFlashFestival
-					<br/>catégorie
-					Net&nbsp;Art/Graphisme</p>
-			</li>
-		</ul>
-	</div>
-	</div>
 
-	<div class="super-group">
-
-	<div class="group">
-		<h3>Compétences et outils</h3>
-		<ul>
-			<li>
-				<h4>Programmation</h4>
-				<p>Processing, Javascript, Python, ActionScript</p>
-			</li>
-			<li>
-				<h4>Hardware boards</h4>
-				<p>Arduino, RaspberryPi, Raspbian, PiCamera</p>
-			</li>
-			<li>
-				<h4>Interfaces tangibles</h4>
-				<p>Leap Motion, Kinect, Wiimote, RFID</p>
-			</li>
-		</ul>
-	</div>
-
-	<div class="group">
-		<ul>
-			<li>
-				<h4>Web</h4>
-				<p>Html5, Css3, JS, Canvas, NodeJS, Sass, Less, Grunt, Bower, SVG, p5.js, d3.js, three.js, vue.js, underscore, backbone, Php, jQuery, Mysql, Wordpress, Responsive&nbsp;design</p>
-			</li>
-			<li>
-				<h4>Interfaçage</h4>
-				<p>OSC, DMX, Spacebrew</p>
-			</li>
-			<li>
-				<h4>Frameworks</h4>
-				<p>Geomerative, OpenCV, Hype</p>
-			</li>
-			<li>
-
-			</li>
-		</ul>
-	</div>
-
-	<div class="group">
-		<ul>
-			<li>
-				<h4>Photo, vidéo, animation</h4>
-				<p>Photoshop, Illustrator, Flash,
-				After Effect, Première</p>
-			</li>
-			<li>
-				<h4>Autres</h4>
-				<p>OsX, Linux, Git/Github/Gitlab, JIRA, Docker</p>
-			</li>
-			<li>
-				<h4>Et aussi</h4>
-				<p>Habitué du hackerspace <a href="http://jack.tf" target="_blank">le Jack</a>,
-					<br /><a href="https://fr.wikipedia.org/wiki/Utilisateur:Zpanpana" target="_blank">Rhinocéros laineux</a> sur Wikipédia,
-					<br />Jardinier&nbsp;<a href="https://twitter.com/hashtag/arbre287173" target="_blank">de&nbsp;rue</a> à Paris
-					</p>
-			</li>
-		</ul>
-	</div>
-
-	</div>
-
-	<div class="super-group">
-
-		<div class="group panpan"></div>
-
-		<div class="group contact">
-
-			<h3>Contact</h3>
-			<p>
-				Arthur Violy
-				<br/><i class="fa fa-heartbeat"></i> né en 1985<small>, comme <a href="https://fr.wikipedia.org/wiki/Super_Mario_Bros." class="camouflage" target="_blank">Super Mario Bros.</a></small>
-				<br/>
-				<br/><i class="fa fa-home"></i> 37, rue des Rasselins, Paris 20<sup>e</sup>, France
-				<br/><a href="tel:+33688014224" title="Arthur Violy"><i class="fa fa-phone"></i> 06 88 01 42 24</a>
-				<br/><a href="https://twitter.com/_panpan" target="_blank"><i class="fa fa-twitter"></i> @_panpan</a>
-				<br/><a href="https://github.com/violy" target="_blank"><i class="fa fa-github"></i> /violy</a>
-				<br/><a href="https://gitlab.violy.fr/explore/projects" target="_blank"><i class="fa fa-gitlab"></i> gitlab</a>
-				<br/><a href="https://violy.net/portfolio.html"><i class="fa fa-folder-open"></i> portfolio</a>
-				<br/><a href="https://violy.net/pgp/" target="_blank"><i class="fa fa-user-secret"></i> pgp</a>
-				<br/><a href="https://violy.net" target="_blank"><i class="fa fa-external-link"></i> violy.net</a> <small class="special-mention">sur le Web depuis 2004</small>
-			</p>
+			</div>
 
 		</div>
 
 	</div>
-
-</div>
 </div>
 </body>
 </html>
