--- a/portfolio.html
+++ b/portfolio.html
@@ -12,6 +12,16 @@
 	<![endif]-->
 	<link href='//fonts.googleapis.com/css?family=Raleway:900,700,500,300' rel='stylesheet' type='text/css'>
 
+	<!-- Global site tag (gtag.js) - Google Analytics -->
+	<script async src="https://www.googletagmanager.com/gtag/js?id=UA-113801860-1"></script>
+	<script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag(){dataLayer.push(arguments);}
+        gtag('js', new Date());
+
+        gtag('config', 'UA-113801860-1');
+	</script>
+
 </head>
 <body>
 <div class="container">
