--- a/cv_arthur_violy.html
+++ b/cv_arthur_violy.html
@@ -121,7 +121,7 @@
 					</li>
 					<li>
 						<h4>2006</h4>
-						<p>Lauréat du WebFlashFestival
+						<p>Lauréat du WebFlashFestival, Centre Georges Pompidou
 							<br/>catégorie
 							Net&nbsp;Art/Graphisme</p>
 					</li>
@@ -136,7 +136,7 @@
 				<ul>
 					<li>
 						<h4>Programmation</h4>
-						<p>Processing, Javascript, Python, ActionScript</p>
+						<p>Javascript, Processing, PHP, Python, ActionScript</p>
 					</li>
 					<li>
 						<h4>Hardware boards</h4>
@@ -153,7 +153,8 @@
 				<ul>
 					<li>
 						<h4>Web</h4>
-						<p>Html5, Css3, JS, Canvas, NodeJS, Sass, Less, Grunt, Bower, SVG, p5.js, d3.js, three.js, vue.js, underscore, backbone, Php, jQuery, Mysql, Wordpress, Responsive&nbsp;design</p>
+						<p>HTML, CSS, JS, NodeJS, ReactJS, GatsbyJS, SVG, Sass, p5.js, d3.js, three.js, paged.js,
+							jQuery, PHP, Mysql, Wordpress, Responsive&nbsp;design</p>
 					</li>
 					<li>
 						<h4>Interfaçage</h4>
@@ -172,19 +173,20 @@
 			<div class="group">
 				<ul>
 					<li>
-						<h4>Photo, vidéo, animation</h4>
-						<p>Photoshop, Illustrator, Flash,
-							After Effect, Première</p>
+						<h4>Édition, photo, vidéo, animation</h4>
+						<p>Adobe CC</p>
 					</li>
 					<li>
 						<h4>Autres</h4>
-						<p>OsX, Linux, Git/Github/Gitlab, JIRA, Docker</p>
+						<p>MacOS, Linux, Git, JIRA, Docker</p>
 					</li>
 					<li>
 						<h4>Et aussi</h4>
-						<p>Habitué du hackerspace <a href="http://jack.tf" target="_blank">le Jack</a>,
-							<br /><a href="https://fr.wikipedia.org/wiki/Utilisateur:Zpanpana" target="_blank">Rhinocéros laineux</a> sur Wikipédia,
+						<p>
+							<a href="https://fr.wikipedia.org/wiki/Utilisateur:Zpanpana" target="_blank">Rhinocéros laineux</a> sur Wikipédia
+							<br />Fréquente le hackerspace <a href="https://fuz.re/" target="_blank">le FUZ</a>
 							<br />Jardinier&nbsp;<a href="https://twitter.com/hashtag/arbre287173" target="_blank">de&nbsp;rue</a> à Paris
+							<br />Dessine des lettres
 						</p>
 					</li>
 				</ul>
@@ -200,16 +202,14 @@
 
 				<h3>Contact</h3>
 				<p>
-					Arthur Violy
+					<strong class="me">Arthur Violy</strong>
 					<br/><i class="fa fa-heartbeat"></i> né en 1985<small>, comme <a href="https://fr.wikipedia.org/wiki/Super_Mario_Bros." class="camouflage" target="_blank">Super Mario Bros.</a></small>
 					<br/>
 					<br/><i class="fa fa-home"></i> 37, rue des Rasselins, Paris 20<sup>e</sup>, France
 					<br/><a href="tel:+33688014224" title="Arthur Violy"><i class="fa fa-phone"></i> 06 88 01 42 24</a>
 					<br/><a href="https://twitter.com/_panpan" target="_blank"><i class="fa fa-twitter"></i> @_panpan</a>
 					<br/><a href="https://github.com/violy" target="_blank"><i class="fa fa-github"></i> /violy</a>
-					<br/><a href="https://gitlab.violy.fr/explore/projects" target="_blank"><i class="fa fa-gitlab"></i> gitlab</a>
-					<br/><a href="https://violy.net/portfolio.html"><i class="fa fa-folder-open"></i> portfolio</a>
-					<br/><a href="https://violy.net/pgp/" target="_blank"><i class="fa fa-user-secret"></i> pgp</a>
+					<a href="https://violy.net/portfolio.html" class="portfolio"><br/><i class="fa fa-folder-open"></i> portfolio</a>
 					<br/><a href="https://violy.net" target="_blank"><i class="fa fa-external-link"></i> violy.net</a> <small class="special-mention">sur le Web depuis 2004</small>
 				</p>
 
