--- a/cv_arthur_violy.html
+++ b/cv_arthur_violy.html
@@ -209,7 +209,7 @@
 					<br/><a href="tel:+33688014224" title="Arthur Violy"><i class="fa fa-phone"></i> 06 88 01 42 24</a>
 					<br/><a href="https://twitter.com/_panpan" target="_blank"><i class="fa fa-twitter"></i> @_panpan</a>
 					<br/><a href="https://github.com/violy" target="_blank"><i class="fa fa-github"></i> /violy</a>
-					<a href="https://violy.net/portfolio.html" class="portfolio"><br/><i class="fa fa-folder-open"></i> portfolio</a>
+					<span class="link-portfolio"><br/><a href="https://violy.net/portfolio.html"><i class="fa fa-folder-open"></i> portfolio</a></span>
 					<br/><a href="https://violy.net" target="_blank"><i class="fa fa-external-link"></i> violy.net</a> <small class="special-mention">sur le Web depuis 2004</small>
 				</p>
 
